# council

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION.md  LICENSE  README.md  gemini-code-1777689636498.md  main.py  pyproject.toml  workspace.db
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: agents.yaml  tasks.yaml
gui/: app.js  avatars.js  index.html  styles.css  verify.html  workspace.css  workspace.html  workspace.js
src/council/: __init__.py  config.py  db.py  live_runner.py  main.py  manifest.py  resume.py  server.py  simulator.py  state.py
src/council/agents/: __init__.py  aggregator.py  discussant.py  dossier_author.py  expectation_curator.py  expectation_evaluator.py  expert.py  fact_checker.py  host_a.py  host_b.py  moderator.py  rapporteur.py  recorder.py
src/council/crews/: __init__.py  audit_crew.py  debate_crew.py  dossier_crew.py  research_crew.py
src/council/gui/: __init__.py
src/council/tools/: __init__.py  library_tool.py  pdf_tool.py  search_tool.py
src/council/workspace/: __init__.py  agents.py  cli.py  db.py  export.py  llm.py  server.py  smoke_test.py  sse.py  state.py
tests/: test_audit_loop.py  test_config.py  test_db.py  test_debate.py  test_expectation.py  test_moderator.py  test_research.py  test_resume.py  test_server.py  test_state_extended.py  test_trafilatura_extraction.py  test_verify_source.py  test_workspace.py  test_workspace_agents.py  test_workspace_server.py
