[project]
name = "council"
version = "0.1.0"
description = "COUNCIL — Multi-Agent Scientific Brainstorming Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1",
    "chromadb>=1.1.1",
    "crewai[tools]>=0.100",
    "ddgs>=9.14.2",
    "fastapi>=0.115",
    "pydantic>=2.12.5",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "rich>=14.3.4",
    "tavily-python>=0.7.24",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
council = "council.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/council"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
